objects/Additional_Account_Segmentation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Additional Account Segmentations</relationshipLabel>
        <relationshipName>Additional_Account_Segmentations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Segmentation_Year_1__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Customer_Sales_Segmentation_Year_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Segmentation Year +1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Segmentation_Year_2__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Customer_Sales_Segmentation_Year_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Segmentation Year +2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Segmentation_Year_3__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Customer_Sales_Segmentation_Year_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Segmentation Year +3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Segmentation__c</fullName>
        <formula>TEXT(Account_Segmentation__r.Customer_Sales_Segmentation__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Segmentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation_Year__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Growth_Potential_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Segmentation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <label>Account Segmentation</label>
        <referenceTo>Customer_Segmentation__c</referenceTo>
        <relationshipLabel>Additional Account Segmentations</relationshipLabel>
        <relationshipName>Additional_Account_Segmentation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Account_Segmentation__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Business_Line_BU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <formula>TEXT( Account_Segmentation__r.DIV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DIV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAG__c</fullName>
        <formula>Account_Segmentation__r.Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Potential__c</fullName>
        <formula>Account_Segmentation__r.Growth_Potential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Potential %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Heat_Map_Segmentation_Year__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Marketing_Segmentation_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heat Map Segmentation Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heat_Map__c</fullName>
        <formula>TEXT(Account_Segmentation__r.PIE_Customer_Marketing_Segmentation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heat Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Account_Segmentation__r.Product_Group__r.Product_Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Account_Segmentation__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Level__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Segment_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <formula>TEXT(VALUE( Account_Segmentation_Year__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <formula>TEXT(VALUE( Account_Segmentation_Year__c )+2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <formula>TEXT(VALUE( Account_Segmentation_Year__c )+3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year +3</label>
        <type>Text</type>
    </fields>
    <label>Additional Account Segmentation</label>
    <nameField>
        <label>Additional Account Segmentations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Segmentations</pluralLabel>
    <recordTypes>
        <fullName>Account_Sales_Segmentation</fullName>
        <active>true</active>
        <label>Account Sales Segmentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Heat_Maps</fullName>
        <active>true</active>
        <label>Heat Maps</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>